--- a/sass/components/_memories.scss
+++ b/sass/components/_memories.scss
@@ -15,17 +15,14 @@
         margin: 0 auto;
         height: 80%;
         width: 25%;
-        box-shadow: 0 4rem 2rem rgba($color-black, .8);
+        box-shadow: 0 2rem 2rem rgba($color-black, .8);
         overflow: hidden;
         opacity: 0;
         transform: translate(-50%, -50%) scale(0);
         transition: all .5s;
         border-radius: 3px;
-        background-image: url(/img/Dario-Sr.jpg);
-        background-color: rgba($color-black, .6);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
+        background-color: rgba($color-grey-dark-3, .8);
+        
 
         &-text {
         width: 100%;
@@ -33,22 +30,34 @@
         background-color: rgba($color-black, .6);
         position: relative;
 
-        p {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 2rem;
-            padding: 0;
-            color: $color-grey-light-2;
-            text-align: justify;
-            line-height: 1.3;
+            p {
+                position: absolute;
+                top: 30%;
+                left: 30%;
+                transform: translate(-20%, -20%);
+                font-size: 2rem;
+                padding: 0;
+                color: $color-grey-light-2;
+                text-align: justify;
+                line-height: 1.3;
+            }
         }
     }
+
+    &__dario {
+        background-image: url(/img/Dario-Sr.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
     }
 
-
-
+    &__warlito {
+        background-image: url(/img/warlito-valdez.jpeg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    
         //OPEN STATES
 
     &:target {
