--- a/sass/components/_photos.scss
+++ b/sass/components/_photos.scss
@@ -22,7 +22,7 @@
     &__memory {
         width: 100%;
         height: 100%;
-        background-color: rgba($color-grey-dark-3, .8);
+        background-color: rgba($color-black, .6);
         text-decoration: none;
         position: absolute;
         top: 0;
