--- a/sass/main.css
+++ b/sass/main.css
@@ -430,8 +430,8 @@ form {
   margin: 0 auto;
   height: 80%;
   width: 25%;
-  -webkit-box-shadow: 0 4rem 2rem rgba(0, 0, 0, 0.8);
-          box-shadow: 0 4rem 2rem rgba(0, 0, 0, 0.8);
+  -webkit-box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.8);
+          box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.8);
   overflow: hidden;
   opacity: 0;
   -webkit-transform: translate(-50%, -50%) scale(0);
@@ -439,11 +439,7 @@ form {
   -webkit-transition: all .5s;
   transition: all .5s;
   border-radius: 3px;
-  background-image: url(/img/Dario-Sr.jpg);
-  background-color: rgba(0, 0, 0, 0.6);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-color: rgba(51, 51, 51, 0.8);
 }
 
 .memory__lovedOne-text {
@@ -455,15 +451,29 @@ form {
 
 .memory__lovedOne-text p {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  top: 30%;
+  left: 30%;
+  -webkit-transform: translate(-20%, -20%);
+          transform: translate(-20%, -20%);
   font-size: 2rem;
   padding: 0;
   color: #eee;
   text-align: justify;
   line-height: 1.3;
+}
+
+.memory__dario {
+  background-image: url(/img/Dario-Sr.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.memory__warlito {
+  background-image: url(/img/warlito-valdez.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .memory:target {
@@ -527,7 +537,7 @@ form {
 .photos__memory {
   width: 100%;
   height: 100%;
-  background-color: rgba(51, 51, 51, 0.8);
+  background-color: rgba(0, 0, 0, 0.6);
   text-decoration: none;
   position: absolute;
   top: 0;
